--- a/views/components/list/blogPostReactionList.pug
+++ b/views/components/list/blogPostReactionList.pug
@@ -14,6 +14,7 @@ ul.blog-post__reaction-list
                     'type': 'submit',
                     'class': [
                         'blog-post__like-button',
+                        'blog-post__reaction-button',
                         '-padding-even-small',
                         '-column'
                     ]
@@ -48,6 +49,7 @@ ul.blog-post__reaction-list
                     'type': 'submit',
                     'class': [
                         'blog-post__dislike-button',
+                        'blog-post__reaction-button',
                         '-padding-even-small',
                         '-column'
                     ]
@@ -76,6 +78,7 @@ ul.blog-post__reaction-list
             { 
                 'href': '#comment-section',
                 'class': [
+                    'blog-post__reaction-button',
                     '-padding-even-small',
                     '-button',
                     '-column'
