--- a/views/components/toolbar/sidebar.pug
+++ b/views/components/toolbar/sidebar.pug
@@ -53,8 +53,7 @@ nav.sidebar
                         'class': [
                             'sidebar__profile-overview',
                             '-avatar',
-                            '-large',
-                            '-gap-medium'
+                            '-large'
                         ]
                     }
                 )
