--- a/views/pages/blogPost.pug
+++ b/views/pages/blogPost.pug
@@ -17,35 +17,36 @@ block page
                 header.blog-post__header
                     h1.blog-post__title= title
                     .blog-post__metadata
-                        .blog-post__author-details
-                            - const author = blogPost.author
-                            - let profileIcon = images.profileIcon
+                        .blog-post__metadata-top
+                            .blog-post__author-details
+                                - const author = blogPost.author
+                                - let profileIcon = images.profileIcon
 
-                            if author.profile_pic
-                                - const profilePic = author.profile_pic
-                                - const profilePicBase64 = profilePic.data.toString('base64')
-                                - profileIcon = `data:${profilePic.contentType};base64,${profilePicBase64}`
+                                if author.profile_pic
+                                    - const profilePic = author.profile_pic
+                                    - const profilePicBase64 = profilePic.data.toString('base64')
+                                    - profileIcon = `data:${profilePic.contentType};base64,${profilePicBase64}`
 
-                            +iconElement(
-                                'a',
-                                profileIcon,
-                                author.username,
-                                {
-                                    'href': `/users/${author.username}`,
-                                    'class': [
-                                        '-avatar', 
-                                        '-larger',
-                                        '-gap-medium'
-                                    ]
-                                }
-                            )
+                                +iconElement(
+                                    'a',
+                                    profileIcon,
+                                    author.username,
+                                    {
+                                        'href': `/users/${author.username}`,
+                                        'class': [
+                                            '-avatar'
+                                        ]
+                                    }
+                                )
 
-                        include ../components/list/blogPostReactionList
-                        .blog-post__date
-                            | Published on 
-                            time(
-                                datetime=blogPost.publish_date
-                            )= blogPost.publish_date
+                            include ../components/list/blogPostReactionList
+                            .blog-post__date
+                                | Published on 
+                                time(
+                                    datetime=blogPost.publish_date
+                                )= blogPost.publish_date
+                        .blog-post__metadata-bottom
+                            include ../components/list/blogPostReactionList
 
                 - const thumbnail = blogPost.thumbnail
                 - const thumbnailBase64 = thumbnail.data.toString('base64')
@@ -61,12 +62,7 @@ block page
             section.blog-post-page__more-blogs
                 h2.blog-post-page__post-heading More Blogs
                 +blogPostGrid(
-                    suggestions.slice(0, 2),
-                    {
-                        'blogPostCard': {
-                            'class': '-small'
-                        }
-                    }
+                    suggestions.slice(0, 2)
                 )
         section#comment-section.blog-post-page__comment-section
             h2.blog-post-page__post-heading Comments
