--- a/public/stylesheets/views/components/icon/icon-element/_icon-element.scss
+++ b/public/stylesheets/views/components/icon/icon-element/_icon-element.scss
@@ -1,10 +1,12 @@
-@use '../../../globalSassVars/font-sizes' as fSizes;
-@use '../../../globalSassVars/icon-sizes' as iSizes;
-@use '../../../globalMixins/text-cutoff';
+@use '../../../../globalSassVars/icon-sizes' as iSizes;
+@use '../../../../globalMixins/text-cutoff';
+@use '../../../../globalSassVars/break-points' as bp;
+@use 'modifiers' as mod;
 
 .icon-element {
     display: flex;
     align-items: center;
+    gap: 1rem;
 
     &__icon {
         flex: none;
@@ -31,10 +33,6 @@
         gap: 0.5rem;
     }
 
-    &.-gap-medium {
-        gap: 1rem;
-    }
-
     &.-padding-even-slim {
         padding-top: 0.1rem;
         padding-bottom: 0.1rem;
@@ -57,38 +55,14 @@
     }
 
     &.-small {
-        .icon-element__icon {
-            height: iSizes.$small;
-            width: iSizes.$small;
-        }
-        .icon-element__label {
-            @include text-cutoff.cut(2);
-            font-size: fSizes.$small;
-        }
+        @include mod.small();
     }
 
     &.-large {
-        .icon-element__icon {
-            height: iSizes.$large;
-            width: iSizes.$large;
-        }
-
-        .icon-element__label {
-            @include text-cutoff.cut(2);
-            font-size: fSizes.$large;
-        }
+        @include mod.large();
     }
 
     &.-larger {
-        
-        .icon-element__icon {
-            height: iSizes.$larger;
-            width: iSizes.$larger;
-        }
-
-        .icon-element__label {
-            @include text-cutoff.cut(2);
-            font-size: fSizes.$larger;
-        }
+        @include mod.larger();
     }
 }
