--- a/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
+++ b/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
@@ -17,6 +17,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
         width: 60%;
         aspect-ratio: 4/3;
         margin-left: auto;
