--- a/public/stylesheets/views/pages/_user-blog-posts.scss
+++ b/public/stylesheets/views/pages/_user-blog-posts.scss
@@ -1,4 +1,5 @@
 @use '../../globalSassVars/colors';
+@use '../../globalSassVars/break-points' as bp;
 
 .user-blog-posts-page {
     width: 100%;
@@ -43,4 +44,12 @@
             margin-left: 1rem;
         }
     }
+}
+
+@media (max-width: bp.$bp0) {
+    
+}
+
+@media (min-width: calc(bp.$bp0 + 1px)) and (max-width: bp.$bp1) {
+    
 }
