--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -357,10 +357,6 @@
   font-size: 1.5rem;
 }
 
-.blog-post-list .blog-post-item:last-child {
-  border-bottom: none;
-}
-
 .blog-post-item {
   padding: 0.5rem;
   border-bottom: 2px solid rgb(36, 36, 36);
@@ -368,11 +364,15 @@
 .blog-post-item:hover {
   background-color: rgb(54, 54, 54);
 }
+.blog-post-item__article {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .blog-post-item__top {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   gap: 1rem;
-  margin-bottom: 1rem;
 }
 .blog-post-item__bottom {
   display: flex;
@@ -390,14 +390,17 @@
 .blog-post-item__date-group {
   flex: 1;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.blog-post-item__actions {
-  display: flex;
   gap: 2rem;
 }
 
+@media (max-width: 480px) {
+  .blog-post-item__bottom .blog-post-item__reaction-list {
+    gap: 1rem;
+  }
+  .blog-post-item__actions .icon-element-list {
+    gap: 1rem;
+  }
+}
 .button-list {
   display: flex;
 }
@@ -652,8 +655,6 @@
   }
 }
 .page-container {
-  display: flex;
-  justify-content: center;
   min-height: 100vh;
   width: 80%;
 }
@@ -713,7 +714,7 @@
   overflow-wrap: break-word;
 }
 .blog-post-form-page.-draft-view .blog-post-form-page__left {
-  display: block;
+  display: flex;
 }
 .blog-post-form-page.-draft-view .blog-post-form-page__right {
   display: none;
@@ -722,7 +723,7 @@
   display: none;
 }
 .blog-post-form-page.-preview-view .blog-post-form-page__right {
-  display: block;
+  display: flex;
 }
 
 .blog-post-form {
@@ -942,31 +943,65 @@
 
 .user-blog-posts-page {
   width: 100%;
+  padding: 1rem;
 }
 .user-blog-posts-page__heading {
+  margin: 0;
+  margin-bottom: 1rem;
   text-align: center;
   word-break: break-word;
 }
 .user-blog-posts-page__toolbar {
+  margin-bottom: 1rem;
+}
+.user-blog-posts-page__left-view-tools {
   display: flex;
   align-items: center;
   gap: 2rem;
-  margin-bottom: 2rem;
+}
+.user-blog-posts-page__right-view-tools {
+  display: none;
+}
+.user-blog-posts-page__left-view-button .icon-element__icon {
+  transform: rotate(90deg);
+}
+.user-blog-posts-page.-expanded-searchbar .user-blog-posts-page__search-button {
+  display: none;
+}
+.user-blog-posts-page.-expanded-searchbar .user-blog-posts-page__searchbar {
+  display: flex;
+  width: 100%;
+}
+.user-blog-posts-page.-expanded-searchbar .user-blog-posts-page__sort-form {
+  display: none;
+}
+.user-blog-posts-page.-right-view .user-blog-posts-page__right-view-tools {
+  display: block;
+}
+.user-blog-posts-page.-right-view .user-blog-posts-page__left-view-tools {
+  display: none;
+}
+.user-blog-posts-page.-right-view .user-blog-posts__left {
+  display: none;
+}
+.user-blog-posts-page.-right-view .user-blog-posts__right {
+  display: block;
 }
 
 .user-blog-posts {
   display: flex;
   gap: 2rem;
-  height: 100%;
-  margin-bottom: 2rem;
+}
+.user-blog-posts__tabs {
+  height: 2rem;
 }
 .user-blog-posts__left {
   flex: 1;
 }
 .user-blog-posts__right {
   flex: 1;
-  overflow: auto;
   padding: 1rem;
+  overflow: auto;
   border: 2px solid rgb(36, 36, 36);
 }
 .user-blog-posts__tab-container {
@@ -977,6 +1012,54 @@
   margin-left: 1rem;
 }
 
+@media (max-height: 480px) {
+  .user-blog-posts__tab-container, .user-blog-posts__right {
+    height: 20rem;
+  }
+}
+@media (min-height: 481px) and (max-height: 768px) {
+  .user-blog-posts__tab-container, .user-blog-posts__right {
+    height: 30rem;
+  }
+}
+@media (min-height: 769px) and (max-height: 1024px) {
+  .user-blog-posts__tab-container, .user-blog-posts__right {
+    height: 40rem;
+  }
+}
+@media (min-height: 1025px) {
+  .user-blog-posts__tab-container, .user-blog-posts__right {
+    height: 50rem;
+  }
+}
+@media (max-width: 480px) {
+  .user-blog-posts-page__searchbar {
+    display: none;
+  }
+}
+@media (min-width: 481px) {
+  .user-blog-posts-page__search-button {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .user-blog-posts__right {
+    display: none;
+  }
+}
+@media (min-width: 769px) {
+  .user-blog-posts__right {
+    margin-top: 2rem;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .user-blog-posts__tab-container .blog-post-item__bottom .blog-post-item__reaction-list {
+    gap: 1rem;
+  }
+  .user-blog-posts__tab-container .blog-post-item__actions .icon-element-list {
+    gap: 1rem;
+  }
+}
 .profile-page {
   width: 100%;
 }
