--- a/public/stylesheets/views/components/list/_blog-post-list.scss
+++ b/public/stylesheets/views/components/list/_blog-post-list.scss
@@ -1,12 +1,7 @@
 @use '../../../globalSassVars/colors';
 @use '../../../globalSassVars/font-sizes' as fSizes;
 @use '../../../globalMixins/text-cutoff';
-
-.blog-post-list {
-    .blog-post-item:last-child {
-        border-bottom: none;
-    }
-}
+@use '../../../globalSassVars/break-points' as bp;
 
 .blog-post-item {
     padding: 0.5rem;
@@ -16,11 +11,16 @@
         background-color: colors.$button;
     }
 
+    &__article {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
     &__top {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
         gap: 1rem;
-        margin-bottom: 1rem;
     }
 
     &__bottom {
@@ -38,12 +38,22 @@
     &__date-group {
         flex: 1;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    &__actions {
-        display: flex;
         gap: 2rem;
+    }
+}
+
+@media (max-width: bp.$bp0) {
+    .blog-post-item {
+        &__bottom {
+            .blog-post-item__reaction-list {
+                gap: 1rem;
+            }
+        }
+
+        &__actions {
+            .icon-element-list {
+                gap: 1rem;
+            }
+        }
     }
 }
