--- a/public/stylesheets/views/pages/_user-blog-posts.scss
+++ b/public/stylesheets/views/pages/_user-blog-posts.scss
@@ -3,25 +3,81 @@
 
 .user-blog-posts-page {
     width: 100%;
+    padding: 1rem;
 
     &__heading {
+        margin: 0;
+        margin-bottom: 1rem;
         text-align: center;
         word-break: break-word;
     }
 
     &__toolbar {
+        margin-bottom: 1rem;
+    }
+
+    &__left-view-tools {
         display: flex;
         align-items: center;
         gap: 2rem;
-        margin-bottom: 2rem;
+    }
+
+    &__right-view-tools {
+        display: none;
+    }
+
+    &__left-view-button {
+        .icon-element__icon {
+            transform: rotate(90deg);
+        }
+    }
+
+    &.-expanded-searchbar {
+        .user-blog-posts-page {
+            &__search-button {
+                display: none;
+            }
+
+            &__searchbar {
+                display: flex;
+                width: 100%;
+            }
+
+            &__sort-form {
+                display: none;
+            }
+        }
+    }
+
+    &.-right-view {
+        .user-blog-posts-page {
+            &__right-view-tools {
+                display: block;
+            }
+
+            &__left-view-tools {
+                display: none;
+            }
+        }
+
+        .user-blog-posts {
+            &__left {
+                display: none;
+            }
+            &__right {
+                display: block;
+            }
+        }
     }
 }
 
 .user-blog-posts {
     display: flex;
     gap: 2rem;
-    height: 100%;
-    margin-bottom: 2rem;
+
+    &__tabs {
+        height: 2rem;
+    }
 
     &__left {
         flex: 1;
@@ -29,8 +85,8 @@
 
     &__right {
         flex: 1;
-        overflow: auto;
         padding: 1rem;
+        overflow: auto;
         border: 2px solid colors.$bg2;
     }
 
@@ -46,10 +102,86 @@
     }
 }
 
-@media (max-width: bp.$bp0) {
-    
+@media (max-height: bp.$bp0) {
+    .user-blog-posts {
+        &__tab-container, &__right {
+            height: 20rem;
+        }
+    }
+} 
+
+@media (min-height: calc(bp.$bp0 + 1px)) and (max-height: bp.$bp1) {
+    .user-blog-posts {
+        &__tab-container, &__right {
+            height: 30rem;
+        }
+    }
 }
 
-@media (min-width: calc(bp.$bp0 + 1px)) and (max-width: bp.$bp1) {
-    
+@media (min-height: calc(bp.$bp1 + 1px)) and (max-height: bp.$bp2) {
+    .user-blog-posts {
+        &__tab-container, &__right {
+            height: 40rem;
+        }
+    }
+}
+
+@media (min-height: calc(bp.$bp2 + 1px)) {
+    .user-blog-posts {
+        &__tab-container, &__right {
+            height: 50rem;
+        }
+    }
+}
+
+@media (max-width: bp.$bp0) {
+    .user-blog-posts-page {
+        &__searchbar {
+            display: none;
+        }
+    }
+}
+
+@media (min-width: calc(bp.$bp0 + 1px)) {
+    .user-blog-posts-page {
+        &__search-button {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: bp.$bp1) {
+    .user-blog-posts {
+        &__right {
+            display: none;
+        }
+    }
+}
+
+@media (min-width: calc(bp.$bp1 + 1px)) {
+    .user-blog-posts {
+        &__right {
+            margin-top: 2rem;
+        }
+    }
+}
+
+@media (min-width: calc(bp.$bp1 + 1px)) and (max-width: bp.$bp2) {
+    .user-blog-posts {
+        &__tab-container {
+            .blog-post-item {
+                &__bottom {
+                    .blog-post-item__reaction-list {
+                        gap: 1rem;
+                    }
+                }
+        
+                &__actions {
+                    .icon-element-list {
+                        gap: 1rem;
+                    }
+                }
+            }
+        }
+    }
 }
