--- a/views/pages/userBlogPosts.pug
+++ b/views/pages/userBlogPosts.pug
@@ -15,27 +15,55 @@ block page
     main.user-blog-posts-page
         h1.user-blog-posts-page__heading= title
         section.user-blog-posts-page__toolbar
-            +searchbar(
-                'Search Blog Posts',
-                {'class': 'user-blog-posts-page__searchbar'}
-            )
-            +formSelect(
-                'sort-by',
-                [
-                    'dislikes',
-                    'last-mod-date', 
-                    'likes',
-                    'publish-date', 
-                    'title', 
-                    'total-comments'
-                ],
-                'title',
-                {
-                    'select': { 
-                        'class': 'user-blog-posts-page__sort-selector'
+            .user-blog-posts-page__right-view-tools
+                +iconElement(
+                    'button',
+                    images.expandIcon,
+                    null,
+                    {
+                        'class': [
+                            'user-blog-posts-page__left-view-button',
+                            '-small'
+                        ]
                     }
-                }
-            )
+                )
+            .user-blog-posts-page__left-view-tools
+                +iconElement(
+                    'button',
+                    images.searchIcon,
+                    null,
+                    {
+                        'class': [
+                            'user-blog-posts-page__search-button',
+                            '-small',
+                            '-padding-even-small'
+                        ]
+                    }
+                )
+                +searchbar(
+                    'Search Blog Posts',
+                    {'class': 'user-blog-posts-page__searchbar'}
+                )
+                +formSelect(
+                    'sort-by',
+                    [
+                        'dislikes',
+                        'last-mod-date', 
+                        'likes',
+                        'publish-date', 
+                        'title', 
+                        'total-comments'
+                    ],
+                    'title',
+                    {
+                        'select': { 
+                            'class': 'user-blog-posts-page__sort-selector'
+                        },
+                        'formSelect': {
+                            'class': 'user-blog-posts-page__sort-form'
+                        }
+                    }
+                )
         .user-blog-posts
             section.user-blog-posts__left 
                 section.user-blog-posts__tabs
