--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1062,8 +1062,11 @@
 }
 .profile-page {
   width: 100%;
+  padding: 1rem;
 }
 .profile-page__heading {
+  margin: 0;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
@@ -1088,8 +1091,8 @@
   min-width: 0;
 }
 .profile__avatar {
-  height: 20rem;
-  width: 20rem;
+  height: 18rem;
+  width: 18rem;
 }
 .profile__avatar img {
   border-radius: 50%;
@@ -1127,10 +1130,24 @@
   display: flex;
   justify-content: space-around;
 }
-.profile-form.-gone {
-  display: none;
-}
 
+@media (max-width: 480px) {
+  .profile__avatar {
+    height: 14rem;
+    width: 14rem;
+  }
+}
+@media (max-width: 768px) {
+  .profile {
+    flex-direction: column;
+  }
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+  .profile__avatar {
+    height: 14rem;
+    width: 14rem;
+  }
+}
 * {
   box-sizing: border-box;
 }
