Feat: Centered error page text

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -22,6 +22,7 @@
 @use 'views/layouts/toolbars';
 @use 'views/pages/blog-post-form';
 @use 'views/pages/blog-post';
+@use 'views/pages/error';
 @use 'views/pages/index';
 @use 'views/pages/user-blog-posts';
 @use 'views/pages/user-profile';
