--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -935,6 +935,11 @@
     display: none;
   }
 }
+.error-page {
+  padding: 1rem;
+  text-align: center;
+}
+
 .index-page {
   width: 100%;
   padding-bottom: 2rem;
