Feat: Blog post fragment title capitalization transform

--- a/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
+++ b/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
@@ -11,6 +11,7 @@
         font-size: fSizes.$larger;
         font-weight: bold;
         word-break: break-word;
+        text-transform: capitalize;
     }
 
     &__thumbnail {
