Fix: blog post item edit button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -240,6 +240,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   word-break: break-word;
+  text-transform: capitalize;
 }
 .blog-post-fragment__thumbnail {
   display: flex;
