--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -672,7 +672,6 @@
 }
 .blog-post-form-page__left {
   flex: 1;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -680,7 +679,6 @@
 }
 .blog-post-form-page__right {
   flex: 1;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -708,11 +706,9 @@
   width: 100%;
   padding: 1rem;
   border: 2px solid rgb(36, 36, 36);
-  border-bottom: none;
 }
 .blog-post-form-page__right > .blog-post-form-page__body {
-  overflow-y: auto;
-  overflow-wrap: break-word;
+  overflow: auto;
 }
 .blog-post-form-page.-draft-view .blog-post-form-page__left {
   display: flex;
@@ -747,6 +743,26 @@
   min-height: 100%;
 }
 
+@media (max-height: 480px) {
+  .blog-post-form-page__left, .blog-post-form-page__right {
+    height: 20rem;
+  }
+}
+@media (min-height: 481px) and (max-height: 768px) {
+  .blog-post-form-page__left, .blog-post-form-page__right {
+    height: 30rem;
+  }
+}
+@media (min-height: 769px) and (max-height: 1024px) {
+  .blog-post-form-page__left, .blog-post-form-page__right {
+    height: 40rem;
+  }
+}
+@media (min-height: 1025px) {
+  .blog-post-form-page__left, .blog-post-form-page__right {
+    height: 50rem;
+  }
+}
 @media (max-width: 480px) {
   .blog-post-form__submit-button .icon-element__label {
     display: none;
