--- a/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
+++ b/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
@@ -40,5 +40,10 @@
         img {
             width: 60%;
         }
+
+        div {
+            padding-left: 0.5rem;
+            white-space: pre-wrap;
+        }
     }
 }
