--- a/views/components/fragment/blogPostFragment.pug
+++ b/views/components/fragment/blogPostFragment.pug
@@ -1,7 +1,7 @@
 mixin blogPostFragment(blogPost={}, attrs={})
     .blog-post-fragment&attributes(attrs)
         .blog-post-fragment__metadata
-            .blog-post-fragment__title= blogPost.title || ''
+            h1.blog-post-fragment__title= blogPost.title || ''
             if blogPost.thumbnail
                 - const pic = blogPost.thumbnail
                 - const base64 = pic.data.toString('base64')
